Reformatting code, indents